----------------------
* ProjectConfig.toString() should return Project.toString() to avoid breaking external jmx scripts. Reported by Mark Hatton.

SSCM/SSCMBootstrapper
----------------------
* Change Surround sourcecontrol and bootstrapper to use CommandLine() classes (CC-786). Patch by Alex Hooper.

SVN
----------------------
* Relax SVN externals parsing (CC-736). Reported by Patrick Muller.

VSS
----------------------
* VSS modificationset fails for root project (CC-783). Reported by Gert Driesen.

Documentation
======================
* Fix typo in NantScript docs - NAnt.Core.XMLLogger to NAnt.Core.XmlLogger (CC-784). Reported by Gert Driesen.


reporting jsp app
======================

Charts
----------------------
* Charts should now be cached rather than regenerated when no new build has run.

Modifications
----------------------
* Display revision # or label of modification if available (CC-496). Patch by Randy Coulman.


CruiseControl Release Notes - 2.7.2

general
======================
* use Util.doMkDirs() instead of File.mkdirs() to fix possible race condition when creating directories on WinXP, also Windows2000.
* Update bundled cc-config to version 1.7.2.
* Changed how CCDIR is calculated by cruisecontrol.sh in binary distribution to match the source distribution (CC-361)
* Changed connectfour config.xml in binary distribution to use filesystem intead of svn to avoid over loading SourceForge's svn server

contrib
======================

distributed
----------------------
* Added more robust Progress support for AntBuilder on BuildAgents.
* Remove extraneous synchronized flags.
* Add optional child element <remoteResult> to allow retrieval of additional build artifact directories.
* Change CCDist build to execute in the distributed/target directory (same as cc-main).
* Add mail.jar and activation.jar from main to paths for cases where SMTPAppender is used in log4j.properties.