@@ -2674,6 +2674,11 @@ password=P@ssW0rd!
                 <td>No</td>
                 <td>used for authentication.</td>
             </tr>
+            <tr>
+                <td>configDir</td>
+                <td>No</td>
+                <td>Instructs Subversion to read configuration information from the specified directory instead of the default location (.subversion in the user's home directory).</td>
+            </tr>
             </tbody>
         </table>
         </div>
@@ -5026,6 +5031,11 @@ tf workfold /server:http://tfsserver:8080 /login:user@DOMAIN,password /workspace
                 <td>password</td>
                 <td>No</td>
                 <td>used for authentication.</td>
+            </tr>
+            <tr>
+                <td>configDir</td>
+                <td>No</td>
+                <td>Instructs Subversion to read configuration information from the specified directory instead of the default location (.subversion in the user's home directory).</td>
             </tr>
             <tr>
                 <td>property</td>
